--- a/src/bash_record.ipynb
+++ b/src/bash_record.ipynb
@@ -116,45 +116,65 @@
     "\"/root/ray_results/PPO_2024-09-09_20-23-57/PPO_3_agent_waterworld_71484_00003_3_2024-09-09_20-23-58/checkpoint_000000/\"\n",
     "\n",
     "### 4 Agent\n",
-    "/root/ray_results/PPO_2024-09-11_17-54-15/\n",
     "\n",
-    "   |   37.44383\n",
-    "   |   175.94865\n",
-    "   |   -325.19353\n",
-    "   |   -247.76055\n",
-    "   |   179.10133\n",
-    "   |   164.73824\n",
-    "   |   151.29206\n",
-    "2   |   211.24043\n",
-    "   |   162.63252\n",
-    "   |   115.18528\n",
+    "+------------------------------------+------------+-----------------------+--------+------------------+--------+-------------------+\n",
+    "| Trial name                         | status     | loc                   |   iter |   total time (s) |     ts |   combined return |\n",
+    "|------------------------------------+------------+-----------------------+--------+------------------+--------+-------------------|\n",
+    "| PPO_4_agent_waterworld_cb3cd_00000 | TERMINATED | 10.42.142.216:1258483 |    200 |          7431.94 | 800000 |          115.484  |\n",
+    "| PPO_4_agent_waterworld_cb3cd_00001 | TERMINATED | 10.42.142.216:1258485 |    200 |          7560.98 | 800000 |           84.2536 |\n",
+    "| PPO_4_agent_waterworld_cb3cd_00002 | TERMINATED | 10.42.142.216:1647810 |    200 |          6829.64 | 800000 |          180.283  |\n",
+    "| PPO_4_agent_waterworld_cb3cd_00003 | TERMINATED | 10.42.142.216:1658776 |    200 |          6701.19 | 800000 |          102.754  |\n",
+    "| PPO_4_agent_waterworld_cb3cd_00004 | TERMINATED | 10.42.142.216:2021728 |    200 |          6796.54 | 800000 |          187.944  |\n",
+    "| PPO_4_agent_waterworld_cb3cd_00005 | TERMINATED | 10.42.142.216:2026550 |    200 |          6893.58 | 800000 |          103.19   |\n",
+    "| PPO_4_agent_waterworld_cb3cd_00006 | TERMINATED | 10.42.142.216:2386615 |    200 |          6889.7  | 800000 |          160.444  |\n",
+    "| PPO_4_agent_waterworld_cb3cd_00007 | TERMINATED | 10.42.142.216:2398006 |    200 |          6783.54 | 800000 |          174.169  |\n",
+    "| PPO_4_agent_waterworld_cb3cd_00008 | TERMINATED | 10.42.142.216:2764040 |    200 |          6789.14 | 800000 |          144.656  |\n",
+    "| PPO_4_agent_waterworld_cb3cd_00009 | TERMINATED | 10.42.142.216:2764328 |    200 |          6838.66 | 800000 |          136.422  |\n",
+    "+------------------------------------+------------+-----------------------+--------+------------------+--------+-------------------+\n",
+    "\n",
     "\n",
     "Super:\n",
-    "\"/root/ray_results/PPO_2024-09-11_17-54-15/PPO_4_agent_waterworld_dc426_00002_2_2024-09-11_17-54-15/checkpoint_000000/\"\n",
+    "\"/root/ray_results/PPO_2024-09-23_14-26-16/PPO_4_agent_waterworld_cb3cd_00002_9_2024-09-23_14-26-16/checkpoint_000000\"\n",
     "\n",
     "### 5 Agent\n",
     "/root/ray_results/PPO_2024-09-15_15-14-26/\n",
     "\n",
+    "+------------------------------------+------------+-----------------------+--------+------------------+--------+-------------------+\n",
+    "| Trial name                         | status     | loc                   |   iter |   total time (s) |     ts |   combined return |\n",
+    "|------------------------------------+------------+-----------------------+--------+------------------+--------+-------------------|\n",
+    "| PPO_5_agent_waterworld_3240e_00000 | TERMINATED | 10.42.142.216:1794821 |    200 |          8517.37 | 800000 |          142.166  |\n",
+    "| PPO_5_agent_waterworld_3240e_00001 | TERMINATED | 10.42.142.216:1794823 |    200 |          9589.6  | 800000 |           91.567  |\n",
+    "| PPO_5_agent_waterworld_3240e_00002 | TERMINATED | 10.42.142.216:2269528 |    200 |          9750.67 | 800000 |          244.955  |\n",
+    "| PPO_5_agent_waterworld_3240e_00003 | TERMINATED | 10.42.142.216:2332659 |    200 |          9782.82 | 800000 |          165.672  |\n",
+    "| PPO_5_agent_waterworld_3240e_00004 | TERMINATED | 10.42.142.216:2794740 |    200 |          9727.82 | 800000 |          146.598  |\n",
+    "| PPO_5_agent_waterworld_3240e_00005 | TERMINATED | 10.42.142.216:2859059 |    200 |          9950.87 | 800000 |          113.485  |\n",
+    "| PPO_5_agent_waterworld_3240e_00006 | TERMINATED | 10.42.142.216:3403886 |    200 |          9753.01 | 800000 |          104.696  |\n",
+    "| PPO_5_agent_waterworld_3240e_00007 | TERMINATED | 10.42.142.216:3517813 |    200 |          8545.67 | 800000 |           85.3202 |\n",
+    "| PPO_5_agent_waterworld_3240e_00008 | TERMINATED | 10.42.142.216:4135660 |    200 |          9864.13 | 800000 |          221.371  |\n",
+    "| PPO_5_agent_waterworld_3240e_00009 | TERMINATED | 10.42.142.216:4152267 |    200 |          9985.51 | 800000 |          137.84   |\n",
+    "+------------------------------------+------------+-----------------------+--------+------------------+--------+-------------------+\n",
     "\n",
     "Super:\n",
-    "\"checkpoint_000000/\"\n",
+    "\"/root/ray_results/PPO_2024-09-15_15-14-26/PPO_5_agent_waterworld_3240e_00002_2_2024-09-15_15-14-26/checkpoint_000000/\"\n",
     "\n",
     "### 6 Agent\n",
-    "/root/ray_results/PPO_2024-09-11_17-53-50/ (Interrupted)\n",
-    "/root/ray_results/PPO_2024-09-15_07-17-42/\n",
-    "\n",
-    "-366.50917\n",
-    "-476.41343\n",
-    "-338.22253\n",
-    "-51.40623\n",
-    "-507.30046\n",
-    "121.91955\n",
-    "155.72043\n",
-    "145.22141\n",
-    "207.9032\n",
+    "+------------------------------------+------------+-----------------------+--------+------------------+--------+-------------------+\n",
+    "| Trial name                         | status     | loc                   |   iter |   total time (s) |     ts |   combined return |\n",
+    "|------------------------------------+------------+-----------------------+--------+------------------+--------+-------------------|\n",
+    "| PPO_6_agent_waterworld_8b3a9_00000 | TERMINATED | 10.42.142.216:917051  |    200 |          11845.8 | 800000 |          205.491  |\n",
+    "| PPO_6_agent_waterworld_8b3a9_00001 | TERMINATED | 10.42.142.216:917053  |    200 |          10263.5 | 800000 |          159.091  |\n",
+    "| PPO_6_agent_waterworld_8b3a9_00002 | TERMINATED | 10.42.142.216:967035  |    200 |          11605.7 | 800000 |          163.345  |\n",
+    "| PPO_6_agent_waterworld_8b3a9_00003 | TERMINATED | 10.42.142.216:977155  |    200 |          11724.3 | 800000 |          110.968  |\n",
+    "| PPO_6_agent_waterworld_8b3a9_00004 | TERMINATED | 10.42.142.216:1015550 |    200 |          11762.5 | 800000 |          168.311  |\n",
+    "| PPO_6_agent_waterworld_8b3a9_00005 | TERMINATED | 10.42.142.216:1026186 |    200 |          11900.5 | 800000 |          144.467  |\n",
+    "| PPO_6_agent_waterworld_8b3a9_00006 | TERMINATED | 10.42.142.216:1068748 |    200 |          11487.6 | 800000 |           70.6689 |\n",
+    "| PPO_6_agent_waterworld_8b3a9_00007 | TERMINATED | 10.42.142.216:1080386 |    200 |          11493.5 | 800000 |          145.693  |\n",
+    "| PPO_6_agent_waterworld_8b3a9_00008 | TERMINATED | 10.42.142.216:1118965 |    200 |          11558.4 | 800000 |          123.964  |\n",
+    "| PPO_6_agent_waterworld_8b3a9_00009 | TERMINATED | 10.42.142.216:1130659 |    200 |          11519   | 800000 |           87.7496 |\n",
+    "+------------------------------------+------------+-----------------------+--------+------------------+--------+-------------------+\n",
     "\n",
     "Super:\n",
-    "\"/root/ray_results/PPO_2024-09-11_17-53-50/PPO_6_agent_waterworld_cd64a_00001_1_2024-09-11_17-53-50/checkpoint_000000/\"\n",
+    "\n",
     "\n",
     "### 7 Agent\n",
     "/root/ray_results/PPO_2024-09-09_17-08-56\n",
@@ -201,7 +221,7 @@
    },
    "outputs": [],
    "source": [
-    "python test.py --mode=\"eval\" --wandb-key=913528a8e92bf601b6eb055a459bcc89130c7f5f \\\n",
+    "python test.py --mode=\"eval\" --wandb-key=913528a8e92bf601b6eb055a459bcc89130c7f5f --num-samples=10 \\\n",
     "--path=\"/root/ray_results/PPO_2024-09-09_13-44-18/PPO_2_agent_waterworld_9c7f4_00004_4_2024-09-09_13-44-18/checkpoint_000000/\" \\\n"
    ]
   },
