Updated to include additional stopping criteria

--- a/src/bash_record.ipynb
+++ b/src/bash_record.ipynb
@@ -71,7 +71,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "python test.py --mode=\"eval\" --wandb-key=913528a8e92bf601b6eb055a459bcc89130c7f5f --num-samples=10 \\\n",
+    "path=\"\""
+   ]
   },
   {
    "cell_type": "markdown",
@@ -134,7 +137,8 @@
     "\n",
     "\n",
     "Super:\n",
-    "\"/root/ray_results/PPO_2024-09-23_14-26-16/PPO_4_agent_waterworld_cb3cd_00002_9_2024-09-23_14-26-16/checkpoint_000000\"\n",
+    "\"/root/ray_results/PPO_2024-09-23_14-26-16/PPO_4_agent_waterworld_cb3cd_00002_2_2024-09-23_14-26-16/checkpoint_000000/\"\n",
+    "\n",
     "\n",
     "### 5 Agent\n",
     "/root/ray_results/PPO_2024-09-15_15-14-26/\n",
@@ -158,6 +162,8 @@
     "\"/root/ray_results/PPO_2024-09-15_15-14-26/PPO_5_agent_waterworld_3240e_00002_2_2024-09-15_15-14-26/checkpoint_000000/\"\n",
     "\n",
     "### 6 Agent\n",
+    "\n",
+    "\n",
     "+------------------------------------+------------+-----------------------+--------+------------------+--------+-------------------+\n",
     "| Trial name                         | status     | loc                   |   iter |   total time (s) |     ts |   combined return |\n",
     "|------------------------------------+------------+-----------------------+--------+------------------+--------+-------------------|\n",
@@ -174,7 +180,7 @@
     "+------------------------------------+------------+-----------------------+--------+------------------+--------+-------------------+\n",
     "\n",
     "Super:\n",
-    "\n",
+    "\"/root/ray_results/PPO_2024-09-21_01-12-17/PPO_6_agent_waterworld_8b3a9_00000_0_2024-09-21_01-12-17/checkpoint_000000/\"\n",
     "\n",
     "### 7 Agent\n",
     "/root/ray_results/PPO_2024-09-09_17-08-56\n",
