Update evaluation criteria

--- a/dev/dev.ipynb
+++ b/dev/dev.ipynb
@@ -2850,6 +2850,113 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pooled Restoration"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array(['/root/test/waterworld/PPO/2_agent/22.30845564138441/policies/pursuer_0',\n",
+       "       '/root/test/waterworld/PPO/2_agent/22.30845564138441/policies/pursuer_1',\n",
+       "       '/root/test/waterworld/PPO/2_agent/33.04836291061455/policies/pursuer_0',\n",
+       "       '/root/test/waterworld/PPO/2_agent/33.04836291061455/policies/pursuer_1',\n",
+       "       '/root/test/waterworld/PPO/2_agent/53.00706844190301/policies/pursuer_0',\n",
+       "       '/root/test/waterworld/PPO/2_agent/53.00706844190301/policies/pursuer_1',\n",
+       "       '/root/test/waterworld/PPO/2_agent/65.31630841725516/policies/pursuer_0',\n",
+       "       '/root/test/waterworld/PPO/2_agent/65.31630841725516/policies/pursuer_1'],\n",
+       "      dtype='<U70')"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from glob import glob\n",
+    "from os import path\n",
+    "import numpy as np\n",
+    "\n",
+    "path_to_checkpoint = \"/root/test/waterworld/PPO/2_agent/\"\n",
+    "\n",
+    "top_per = 0.5\n",
+    "\n",
+    "x = glob(path_to_checkpoint+\"*\")\n",
+    "#print(x)\n",
+    "x.sort()\n",
+    "#print(x)\n",
+    "top_num = int(len(x)*top_per)\n",
+    "print(top_num)\n",
+    "#print(x[-top_num:])\n",
+    "candidate_runs = x[-top_num:]\n",
+    "#print(candidate_runs)\n",
+    "pool = np.array([glob(f+\"/policies/*\") for f in candidate_runs]).flatten()\n",
+    "pool"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = lambda x: [_ for _ in range(x)]\n",
+    "\n",
+    "b = a(4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 3, 2, 0, 1]"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "n = 5\n",
+    "\n",
+    "h = []\n",
+    "while len(h) < n:\n",
+    "    for e in np.random.choice(b, min(len(b),n-len(h)), replace=False):\n",
+    "        h.append(int(e))\n",
+    "\n",
+    "h"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
