--- a/src/bash_record.ipynb
+++ b/src/bash_record.ipynb
@@ -236,7 +236,36 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "tmux new-session -d 'python train.py --checkpoint-at-end --num-env-runners=30 --num-agents=4'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "shellscript"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "python eval.py --wandb-project=delete_me --wandb-key=913528a8e92bf601b6eb055a459bcc89130c7f5f \\\n",
+    "--path='/root/test/waterworld/PPO/4_agent/-334.6029547490496'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "shellscript"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "python retrain.py --num-env-runners=30 --path='/root/test/waterworld/PPO/4_agent/-334.6029547490496' --num-agents=3"
+   ]
   }
  ],
  "metadata": {
