--- a/src/bash_record.ipynb
+++ b/src/bash_record.ipynb
@@ -232,6 +232,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "New Set of commands"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
