Update from first successful retrain

--- a/src/bash_record.ipynb
+++ b/src/bash_record.ipynb
@@ -244,7 +244,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tmux new-session -d 'python train.py --checkpoint-at-end --num-env-runners=30 --num-agents=4'"
+    "tmux new-session -d 'python train.py --checkpoint-at-end --num-samples=10 --num-env-runners=30\\\n",
+    "--wandb-key=913528a8e92bf601b6eb055a459bcc89130c7f5f --wandb-project=mini-test-waterworld --num-agents=4'"
    ]
   },
   {
