Update supporting items and experiement script

--- a/dev/dev.ipynb
+++ b/dev/dev.ipynb
@@ -406,28 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dir(algo.config.policies)\n",
-    "len(algo.config.policies)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 46,
    "metadata": {
     "vscode": {
      "languageId": "shellscript"
@@ -440,8 +419,7 @@
      "text": [
       "0\n",
       "1\n",
-      "2\n",
-      "8\n"
+      "2\n"
      ]
     }
    ],
@@ -452,9 +430,7 @@
     "a=(a b c)\n",
     "for i in \"${!a[@]}\"; do\n",
     "    echo $i\n",
-    "done\n",
-    "\n",
-    "echo $((2*(3+1)))"
+    "done"
    ]
   }
  ],
