--- a/dev/dev.ipynb
+++ b/dev/dev.ipynb
@@ -432,6 +432,32 @@
     "    echo $i\n",
     "done"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4]\n",
+      "---\n",
+      "[1, 3, 2, 3, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# Slice Test\n",
+    "a = [_ for _ in range(1,5)]\n",
+    "print(a)\n",
+    "print(\"---\")\n",
+    "b = np.random.choice(a[1:-1], 3)\n",
+    "print([a[0],*b,a[-1]])"
+   ]
   }
  ],
  "metadata": {
