Update trianing method

--- a/dev/dev.ipynb
+++ b/dev/dev.ipynb
@@ -1379,6 +1379,28 @@
     "dir(tenv)\n",
     "#tenv.reset()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = None\n",
+    "\n",
+    "if not a:\n",
+    "    print(\"This\")\n",
+    "else:\n",
+    "    print(\"That\")"
+   ]
   }
  ],
  "metadata": {
